[metadata]
name = maildump
version = 1.0
license = MIT
description = An SMTP server that makes all received mails accessible via a web interface and REST API.
long_description = file: README.rst
url = https://github.com/ThiefMaster/maildump
download_url = https://github.com/ThiefMaster/maildump
author = Adrian Mönnich
author_email = adrian@planetcoding.net
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Environment :: No Input/Output (Daemon)
  Environment :: Web Environment
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Topic :: Communications :: Email
  Topic :: Software Development
  Topic :: System :: Networking
  Topic :: Utilities


[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.6
install_requires =
  beautifulsoup4
  Flask
  gevent
  html5lib
  lockfile
  Logbook
  passlib
  python-daemon
  pytz


[options.extras_require]
dev =
  black
  flake8
  isort
  twine
  wheel

[options.entry_points]
console_scripts =
  maildump = maildump_runner.main:main

[flake8]
max-line-length = 120
