[metadata]
name = maildump
version = 1.1
license = MIT
description = An SMTP server that makes all received mails accessible via a web interface and REST API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/ThiefMaster/maildump
download_url = https://github.com/ThiefMaster/maildump
author = Adrian Mönnich
author_email = adrian@planetcoding.net
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python
  Programming Language :: Python :: 3.12
  Environment :: No Input/Output (Daemon)
  Environment :: Web Environment
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Topic :: Communications :: Email
  Topic :: Software Development
  Topic :: System :: Networking
  Topic :: Utilities


[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.12
install_requires =
  beautifulsoup4
  Flask
  gevent
  html5lib
  lockfile
  Logbook
  passlib
  pyasynchat
  pyasyncore
  python-daemon
  pytz


[options.extras_require]
dev =
  ruff
  twine
  wheel

[options.entry_points]
console_scripts =
  maildump = maildump_runner.main:main
